fix: tweaked css to make allEpisodes view have a bit better layout on smaller screens

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -108,6 +108,10 @@ li.ruleItem {
   font-size: smaller;
 }
 
+.allEpiContent {
+  max-width: 80vw
+}
+
 .onePodBtn {
   margin-top: 1%;
   margin-bottom: 1%
